// Copyright 2023 The Blocky Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package testpb;

import "blocky/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/blockysource/blocky-aip/internal/testpb;testpb";

enum Enum {
  UNKNOWN = 0;
  ONE = 1;
  TWO = 2;
  THREE = 3;
}

message Message {
  string name = 1;
  string str = 2;
  int32 i32 = 3;
  int64 i64 = 4;
  uint32 u32 = 5;
  uint64 u64 = 6;
  sint32 s32 = 7;
  sint64 s64 = 8;
  fixed32 f32 = 9;
  fixed64 f64 = 10;
  sfixed32 sf32 = 11;
  sfixed64 sf64 = 12;
  bool bool = 13;
  bytes bytes = 14;
  float float = 15;
  double double = 16;
  repeated string rp_str = 17;
  repeated int32 rp_i32 = 18;
  repeated int64 rp_i64 = 19;
  repeated uint32 rp_u32 = 20;
  repeated uint64 rp_u64 = 21;
  repeated sint32 rp_s32 = 22;
  repeated sint64 rp_s64 = 23;
  repeated fixed32 rp_f32 = 24;
  repeated fixed64 rp_f64 = 25;
  repeated sfixed32 rp_sf32 = 26;
  repeated sfixed64 rp_sf64 = 27;
  repeated bool rp_bool = 28;
  repeated bytes rp_bytes = 29;
  repeated float rp_float = 30;
  repeated double rp_double = 31;

  google.protobuf.Timestamp timestamp = 32;
  google.protobuf.Duration duration = 33;
  google.protobuf.Struct struct = 34;

  repeated google.protobuf.Timestamp rp_timestamp = 35;
  repeated google.protobuf.Duration rp_duration = 36;
  repeated google.protobuf.Struct rp_struct = 37;

  Enum enum = 38;
  repeated Enum rp_enum = 39;

  Message sub = 40;
  repeated Message rp_sub = 41;

  string no_filter = 42 [
    (blocky.api.query_opt) = FORBID_FILTERING,
    (blocky.api.query_opt) = FORBID_SORTING
  ];

  Message no_filter_msg = 43 [
    (blocky.api.query_opt) = FORBID_FILTERING,
    (blocky.api.query_opt) = FORBID_SORTING
  ];

  int32 i32_complexity = 44 [(blocky.api.complexity) = 44];

  map<string, string> map_str_str = 45;
  map<string, int32> map_str_i32 = 46;
  map<string, int64> map_str_i64 = 47;
  map<string, uint32> map_str_u32 = 48;
  map<string, uint64> map_str_u64 = 49;
  map<string, sint32> map_str_s32 = 50;
  map<string, sint64> map_str_s64 = 51;
  map<string, fixed32> map_str_f32 = 52;
  map<string, fixed64> map_str_f64 = 53;
  map<string, sfixed32> map_str_sf32 = 54;
  map<string, sfixed64> map_str_sf64 = 55;
  map<string, bool> map_str_bool = 56;
  map<string, bytes> map_str_bytes = 57;
  map<string, float> map_str_float = 58;
  map<string, double> map_str_double = 59;
  map<string, Enum> map_str_enum = 60;
  map<string, Message> map_str_msg = 61;
  map<string, google.protobuf.Timestamp> map_str_timestamp = 62;
  map<string, google.protobuf.Duration> map_str_duration = 63;

  int32 i32_optional = 64 [(google.api.field_behavior) = OPTIONAL];
  int64 i64_optional = 65 [(google.api.field_behavior) = OPTIONAL];
  uint32 u32_optional = 66 [(google.api.field_behavior) = OPTIONAL];
  uint64 u64_optional = 67 [(google.api.field_behavior) = OPTIONAL];
  sint32 s32_optional = 68 [(google.api.field_behavior) = OPTIONAL];
  sint64 s64_optional = 69 [(google.api.field_behavior) = OPTIONAL];
  fixed32 f32_optional = 70 [(google.api.field_behavior) = OPTIONAL];
  fixed64 f64_optional = 71 [(google.api.field_behavior) = OPTIONAL];
  sfixed32 sf32_optional = 72 [(google.api.field_behavior) = OPTIONAL];
  sfixed64 sf64_optional = 73 [(google.api.field_behavior) = OPTIONAL];
  bool bool_optional = 74 [(google.api.field_behavior) = OPTIONAL];
  string str_optional = 75 [(google.api.field_behavior) = OPTIONAL];
  bytes bytes_optional = 76 [(google.api.field_behavior) = OPTIONAL];
  float float_optional = 77 [(google.api.field_behavior) = OPTIONAL];
  double double_optional = 78 [(google.api.field_behavior) = OPTIONAL];
  google.protobuf.Timestamp timestamp_optional = 79 [(google.api.field_behavior) = OPTIONAL];
  google.protobuf.Duration duration_optional = 80 [(google.api.field_behavior) = OPTIONAL];
  google.protobuf.Struct struct_optional = 81 [(google.api.field_behavior) = OPTIONAL];
  Enum enum_optional = 82 [(google.api.field_behavior) = OPTIONAL];
  Message msg_optional = 83 [(google.api.field_behavior) = OPTIONAL];

  oneof oneof {
    string oneof_str = 84;
    int32 oneof_i32 = 85;
    int64 oneof_i64 = 86;
    uint32 oneof_u32 = 87;
    uint64 oneof_u64 = 88;
    sint32 oneof_s32 = 89;
    sint64 oneof_s64 = 90;
    fixed32 oneof_f32 = 91;
    fixed64 oneof_f64 = 92;
    sfixed32 oneof_sf32 = 93;
    sfixed64 oneof_sf64 = 94;
    bool oneof_bool = 95;
    bytes oneof_bytes = 96;
    float oneof_float = 97;
    double oneof_double = 98;
    google.protobuf.Timestamp oneof_timestamp = 99;
    google.protobuf.Duration oneof_duration = 100;
    google.protobuf.Struct oneof_struct = 101;
    Enum oneof_enum = 102;
    Message oneof_msg = 103;
  }

  string input_only_str = 104 [(google.api.field_behavior) = INPUT_ONLY];

  // This field is a keyword in the query language.
  string AND = 105;

  // IN is a keyword in the query language.
  Message NOT = 106;

  // This field is a keyword in the query language.
  string OR = 107;

  // This field is a keyword in the query language.
  string IN = 108;

  string non_empty_str = 109 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  int32 non_empty_i32 = 110 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  int64 non_empty_i64 = 111 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  uint32 non_empty_u32 = 112 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  uint64 non_empty_u64 = 113 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  sint32 non_empty_s32 = 114 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  sint64 non_empty_s64 = 115 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  fixed32 non_empty_f32 = 116 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  fixed64 non_empty_f64 = 117 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  sfixed32 non_empty_sf32 = 118 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  sfixed64 non_empty_sf64 = 119 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  bool non_empty_bool = 120 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  bytes non_empty_bytes = 121 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  float non_empty_float = 122 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  double non_empty_double = 123 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  google.protobuf.Timestamp non_empty_timestamp = 124 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  google.protobuf.Duration non_empty_duration = 125 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  google.protobuf.Struct non_empty_struct = 126 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];
  Enum non_empty_enum = 127 [(google.api.field_behavior) = NON_EMPTY_DEFAULT];

  Point point = 128;

  map<int32, string> map_i32_str = 129;

  Point point_non_traversal = 130 [(blocky.api.query_opt) = NON_TRAVERSAL];
  string no_search = 131 [(blocky.api.query_opt) = NO_TEXT_SEARCH];
}

message Point {
  float x = 1;
  float y = 2;
}